# moxi

./: .env.example  .gitignore  ARCHITECTURE_BY_MOXI.md  Makefile  PRD.txt  PROJECT_DESCRIPTION.md  README.md  README_BY_MOXI.md  TRAINING_WORKFLOW.md  USAGE_GUIDE.md  awesome_readme_viewer.html  cleanup.sh  cleanup_unused_files.sh  collect_awesome_readme_data.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  start_file_browser.sh  test_github_api.py  test_nested_path.py
.github/workflows/: README.md  auto-generate-docs.yml  auto-generate-docs1.yml
.venv312/: pyvenv.cfg
data/: README.md
data/repo_list/: repositories.json
docs/: AWS_TRAINING_FLOW_NOW.md  DATASET_GENERATOR.md  DOCKER.md  FEATURE_PIPELINE.md  HOW_TRAINING_WORKS.md  MONGODB_SETUP.md  README_DATA_SOURCES.md  TRAINING_ON_AWS.md
examples/: incremental_update_demo.py  smart_merge_demo.py
scripts/: check_memory.py  clean_invalid_repos.py  cleanup_training_data.sh  migrate_readme_to_mongo.py  monitor_memory.sh  run_feature_from_collection.py  run_training_on_aws.py  test_mongo_connect.py
src/: readme_structure.py  requirements.txt  sagemaker_train_entry.py
src/core/: __init__.py  config.py  errors.py  lib.py  logger_utils.py  mq.py
src/core/db/: __init__.py  mongo.py  qdrant.py
src/core/rag/: __init__.py  query_expansion.py  reranking.py  retriever.py
src/dataset_generator/: __init__.py  core.py  main.py  utils.py
src/dataset_generator/crawlers/: __init__.py  awesome_lists.py  github_trending.py
src/dataset_generator/generators/: __init__.py  instruction_gen.py
src/dataset_generator/quality_control/: __init__.py  deduplicator.py  validator.py
src/doc_generator/: __init__.py  core.py  main.py  utils.py  writer.py
src/doc_generator/evaluation/: __init__.py  opik_evaluator.py
src/doc_generator/llm/: __init__.py  architecture_gen.py  openai.py
src/doc_generator/streaming/: __init__.py  bytewax_pipeline.py
src/moxi_analyzer/: __init__.py  main.py  models.py
src/moxi_analyzer/architecture/: analyzer.py
src/moxi_analyzer/crawlers/: __init__.py  github.py
src/moxi_analyzer/parsers/: __init__.py  detector.py  project_validator.py
src/moxi_chunk/: README.md  __init__.py  chunking.py  run_feature.py
src/moxi_chunk/repo_analyzer/: __init__.py  main.py  models.py
src/moxi_collect/: __init__.py  __main__.py  run.py
src/moxi_data/: __init__.py  find_structured_repos.py  repo_fetcher.py  review_backend.py  review_ui.py
src/moxi_data/crawlers/: __init__.py  awesome_list_crawler.py  github_repo_crawler.py
src/moxi_data/quality_control/: __init__.py  clean_dataset_json.py  dataset_validator.py
src/moxi_train/: download_model.py  generate_sft_dataset.py
src/moxi_train/finetune/: __init__.py  comet_tracker.py  lora_config.py  main.py  sft_trainer.py
src/repo_analyzer/: __init__.py  main.py  models.py
src/repo_analyzer/architecture/: __init__.py  analyzer.py
src/repo_analyzer/crawlers/: __init__.py
src/repo_analyzer/parsers/: __init__.py  detector.py  file_analyzer.py  (+1 more)
src/training_data/: reviewed_repos.json
src/web_ui/: __init__.py  github_client.py  gradio_app.py  main.py  pipeline_dashboard.py  pipeline_stats.py  workflow_generator.py
test_folder/: test.txt
tests/: test_concurrency_performance.py  test_concurrency_simple.py  test_concurrency_standalone.py
training_data/: README.md  awesome_readme_clean.json
(+10 files in other folders)
