[project]
name = "moxi"
version = "0.1.0"
description = "AI-powered documentation generator with auto-update"
authors = [
    {name = "ShengruiChen chenleon572@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "click (>=8.3.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.9,<0.15.0)"
]
