[project]
name = "moxi"
version = "0.1.0"
description = "AI-powered documentation generator with auto-update"
authors = [
    {name = "ShengruiChen", email = "chenleon572@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = ">=2.12.5,<3.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
structlog = ">=25.5.0,<26.0.0"
rich = ">=14.2.0,<15.0.0"
click = ">=8.3.1,<9.0.0"
requests = ">=2.31.0,<3.0.0"
openai = ">=1.0.0,<2.0.0"
transformers = ">=4.40.0,<5.0.0"
torch = ">=2.0.0,<3.0.0"
peft = ">=0.10.0,<1.0.0"
trl = ">=0.8.0,<1.0.0"
datasets = ">=3.4.1,<4.0.0"
accelerate = ">=0.30.0,<1.0.0"
bitsandbytes = ">=0.43.0,<1.0.0"
comet-ml = ">=3.41.0,<4.0.0"
# unsloth = ">=2025.8.4,<2026.0.0"  # Temporarily disabled - xformers build issue on macOS
# unsloth_zoo = ">=2025.8.4,<2026.0.0"  # Temporarily disabled - xformers build issue on macOS
qdrant-client = ">=1.8.0,<2.0.0"
pymongo = ">=4.6.0,<5.0.0"
pika = ">=1.3.2,<2.0.0"
sentence-transformers = ">=2.2.2,<3.0.0"
gradio = ">=4.0.0,<5.0.0"
opik = ">=1.0.0,<2.0.0"
langchain = ">=0.2.0,<1.0.0"
langchain-openai = ">=0.1.0,<1.0.0"
langchain-community = ">=0.2.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.14.9,<0.15.0"

[tool.poetry.group.streaming]
optional = true

[tool.poetry.group.streaming.dependencies]
bytewax = ">=0.18.0,<1.0.0"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
sagemaker = ">=2.232.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
